--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-  "start": "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords":[],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "pug": "^2.0.4",
     "sequelize": "^5.14.0",
+    "sequelize-cli": "^5.5.0",
     "sqlite3": "^4.0.9"
   }
 }
